chore: hide submission alert when flow was received
Design said in chat that we should simply hide this banner when a case
was received from VP, as the users get ample notification of this being
a received case via other means.

--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -40,7 +40,7 @@
 </Auk::Toolbar>
 
 {{#if this.enableVlaamsParlement}}
-  {{#if this.parliamentFlow}}
+  {{#if (and this.parliamentFlow (not this.parliamentFlow.isReceived))}}
     <Vp::SubmissionsAlert
       @parliamentFlow={{this.parliamentFlow}}
     />
