--- a/app/components/agenda/printable-agenda/list-section/item-group/item/document.hbs
+++ b/app/components/agenda/printable-agenda/list-section/item-group/item/document.hbs
@@ -1,4 +1,4 @@
-<span>({{@piece.name}})</span>
+<span>{{@piece.name}}</span>
 {{#if this.showAccessLevel}}
   <AccessLevelPill @accessLevel={{@accessLevel}} @size="small" />
 {{/if}}
