--- a/app/components/publications/publication/case/remark/remark-panel.hbs
+++ b/app/components/publications/publication/case/remark/remark-panel.hbs
@@ -39,9 +39,10 @@
                 {{t "publication-remark-help"}}
               </Utils::Generic::TooltipHelp>
             </Auk::Label>
-            <Auk::Textarea
+            <AuTextarea
               data-test-remark-panel-textarea
-              @rows="12"
+              rows="12"
+              @width="block"
               @value={{this.remark}}
             />
           </AuFormRow>
