--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -39,6 +39,7 @@ $au-label-color: var(--au-gray-700);
 @import '@appuniversum/ember-appuniversum/styles/components/c-modal';
 @import '@appuniversum/ember-appuniversum/styles/components/c-sidebar';
 @import '@appuniversum/ember-appuniversum/styles/components/c-table';
+@import '@appuniversum/ember-appuniversum/styles/components/c-textarea';
 @import '@appuniversum/ember-appuniversum/styles/components/c-toaster';
 @import '@appuniversum/ember-appuniversum/styles/components/c-toolbar';
 @import '@appuniversum/ember-appuniversum/styles/components/c-toggle-switch';
@@ -343,7 +344,8 @@ $au-label-color: var(--au-gray-700);
   border-top: none;
 }
 
-.au-c-input:focus {
+.au-c-input:focus,
+.au-c-textarea:focus {
   border-color: $au-input-border-color !important;
   box-shadow: none !important;
 
