chore: simplify cases.case.subcases route by returning flow in model

--- a/app/templates/cases/case/subcases.hbs
+++ b/app/templates/cases/case/subcases.hbs
@@ -1,12 +1,12 @@
 <Subcases::SubcasesOverviewHeader
-  @decisionmakingFlow={{this.decisionmakingFlow}}
   @onCreateSubcase={{this.refreshSubcases}}
   @onSaveCase={{perform this.saveCase}}
+  @decisionmakingFlow={{@model.decisionmakingFlow}}
 />
 <div class="auk-panel-layout">
   <div class="auk-panel-layout__sidebar auk-panel-layout__sidebar--cases">
     <Subcases::SideNav
-      @subcases={{this.model}}>
+      @subcases={{@model.subcases}}>
     </Subcases::SideNav>
   </div>
   <div class="auk-panel-layout__main-content au-u-flex au-u-flex--column">
