chore: remove unused code from cases.case.subcases controller
The existing actions weren't used (onCreateSubcase is never used in
Subcases::SubcasesOverviewHeader) and saveCase doesn't need to be a task.

--- a/app/templates/cases/case/subcases.hbs
+++ b/app/templates/cases/case/subcases.hbs
@@ -1,7 +1,6 @@
 <Subcases::SubcasesOverviewHeader
-  @onCreateSubcase={{this.refreshSubcases}}
-  @onSaveCase={{perform this.saveCase}}
   @decisionmakingFlow={{@model.decisionmakingFlow}}
+  @onSaveCase={{this.saveCase}}
 />
 <div class="auk-panel-layout">
   <div class="auk-panel-layout__sidebar auk-panel-layout__sidebar--cases">
