chore: move refreshing logic to action in route
Refreshing a route in a component doesn't necessarily make sense given
that it might be rendered in an unexpected route. Therefore we extract
the refreshing logic to the route's controller and pass an action to the component.

--- a/app/templates/cases/case/subcases/add-subcase.hbs
+++ b/app/templates/cases/case/subcases/add-subcase.hbs
@@ -1,4 +1,5 @@
 <Cases::Subcases::NewSubcaseForm
   @decisionmakingFlow={{this.decisionmakingFlow}}
   @latestSubcase={{this.latestSubcase}}
+  @onCreateSubcase={{this.onCreateSubcase}}
 />
