chore: handle empty state (when no subcase exists)

--- a/app/templates/cases/case/subcases.hbs
+++ b/app/templates/cases/case/subcases.hbs
@@ -3,11 +3,13 @@
   @onSaveCase={{this.saveCase}}
 />
 <div class="auk-panel-layout">
-  <div class="auk-panel-layout__sidebar auk-panel-layout__sidebar--cases">
-    <Subcases::SideNav
-      @subcases={{@model.subcases}}>
-    </Subcases::SideNav>
-  </div>
+  {{#if @model.subcases.length}}
+    <div class="auk-panel-layout__sidebar auk-panel-layout__sidebar--cases">
+      <Subcases::SideNav
+        @subcases={{@model.subcases}}>
+      </Subcases::SideNav>
+    </div>
+  {{/if}}
   <div class="auk-panel-layout__main-content au-u-flex au-u-flex--column">
     {{outlet}}
   </div>
