--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -69,6 +69,7 @@
                 }}
               >
                 <Agenda::AgendaOverview::AgendaOverviewItem
+                  @isDesignAgenda={{@currentAgenda.status.isDesignAgenda}}
                   @agendaitem={{agendaitem}}
                   @meeting={{@meeting}}
                   @currentAgenda={{@currentAgenda}}
