--- a/app/components/auk/new.hbs
+++ b/app/components/auk/new.hbs
@@ -1,4 +1,4 @@
-<span class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center au-u-para-small au-u-muted auk-u-text-nowrap auk-u-mr-2" ...attributes>
+<span class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center au-u-para-small au-u-regular au-u-muted auk-u-text-nowrap auk-u-mr-2" ...attributes>
   <span class="auk-color-badge auk-color-badge--success"></span>
   <span>{{@title}}</span>
 </span>
