--- a/app/components/subcase-demo/publication-status.hbs
+++ b/app/components/subcase-demo/publication-status.hbs
@@ -49,7 +49,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            In vertaling op <AuLinkExternal @href="#!">23 december 2023</AuLinkExternal>
+            In vertaling op 23 december 2023
           </div>
         </li>
         <li
@@ -57,7 +57,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Aanvraag drukproef op <AuLinkExternal @href="#!">18 december 2023</AuLinkExternal>
+            Aanvraag drukproef op 18 december 2023
           </div>
         </li>
       </ul>
