--- a/app/components/subcase-demo/vp-title.hbs
+++ b/app/components/subcase-demo/vp-title.hbs
@@ -6,7 +6,7 @@
           <Auk::Toolbar::Item>
             <div class="au-u-flex au-u-flex--spaced-small">
               <h4 class="auk-panel__title">
-                Decreet info
+                Dossier info
               </h4>
             </div>
           </Auk::Toolbar::Item>
@@ -31,10 +31,10 @@
           <AuHeading @level="4" @skin="6">Nummer</AuHeading>
           <p class="auk-u-mt-1">1446 (2022-2023) nr. 1</p>
         </div>
-        <div class="au-o-grid__item au-u-1-2 au-u-2-4@medium">
+        {{!-- <div class="au-o-grid__item au-u-1-2 au-u-2-4@medium">
           <AuHeading @level="4" @skin="6">Stand van zaken</AuHeading>
           <p class="auk-u-mt-1">Bekendgemaakt in Belgisch Staatsblad</p>
-        </div>
+        </div> --}}
       </div>
     </Auk::Panel::Body>
     <Auk::Panel::Body class="auk-u-bg-alt">
