--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -36,7 +36,7 @@
     <p>Op deze pagina:</p>
     <ul class="au-c-anchor-nav">
       <li>
-        <a href="#case" class="js-anchor">Decreet info</a>
+        <a href="#case" class="js-anchor">Dossier info</a>
       </li>
       <li>
         <a href="#documents" class="js-anchor">Nieuwste documenten</a>
