--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -121,6 +121,37 @@
   <Auk::Modal::Body>
     <AuContent>
       <p>Vink de documenten aan die verstuurd mogen worden naar het Vlaams Parlement</p>
+
+      <AuHeading @skin="6" @level="3" class="au-u-margin-top">Goedkeuring na advies van de Raad van State:</AuHeading>
+      <div class="au-c-control-group">
+        <AuCheckbox
+          @checked={{true}}
+        >
+          <AuLinkExternal href="#!">VR 2024 2302 DOC.0200-2 Decreet dienstencheques - decreet (Word en PDF)</AuLinkExternal>
+        </AuCheckbox>
+        <AuCheckbox
+          @checked={{true}}
+        >
+          <AuLinkExternal href="#!">VR 2024 2302 DOC.0200-3 Decreet dienstencheques - memorie (Word en ondertekende PDF)</AuLinkExternal>
+        </AuCheckbox>
+        <AuCheckbox
+          @checked={{true}}
+        >
+          <AuLinkExternal href="#!">VR 2024 2302 DOC.0200-1 Decreet dienstencheques - nota (PDF)</AuLinkExternal>
+        </AuCheckbox>
+        <AuCheckbox
+          @checked={{false}}
+        >
+          <AuLinkExternal href="#!">VR PV 2024/8 - punt 0016 (ondertekende PDF)</AuLinkExternal>
+        </AuCheckbox>
+        <AuCheckbox
+          @checked={{false}}
+          @disabled={{true}}
+        >
+          <AuLinkExternal @skin="secondary" href="#!">VR 2024 2302 DOC.0200-4 Decreet dienstencheques - advies (PDF) <AuPill @size="small" @icon="circle" @skin="warning">Intern regering</AuPill></AuLinkExternal>
+        </AuCheckbox>
+      </div>
+
       <AuHeading @skin="6" @level="3" class="au-u-margin-top">Principiële goedkeuring:</AuHeading>
       <div class="au-c-control-group">
         <AuCheckbox
@@ -186,35 +217,6 @@
           @checked={{false}}
         >
           <AuLinkExternal href="#!">VR 2023 1310 DOC.1311-6 Decreet dienstencheques - advies (PDF)</AuLinkExternal>
-        </AuCheckbox>
-      </div>
-
-      <AuHeading @skin="6" @level="3" class="au-u-margin-top">Definitieve goedkeuring:</AuHeading>
-      <div class="au-c-control-group">
-        <AuCheckbox
-          @checked={{true}}
-        >
-          <AuLinkExternal href="#!">VR 2024 2302 DOC.0200-2 Decreet dienstencheques - decreet (Word en PDF)</AuLinkExternal>
-        </AuCheckbox>
-        <AuCheckbox
-          @checked={{true}}
-        >
-          <AuLinkExternal href="#!">VR 2024 2302 DOC.0200-3 Decreet dienstencheques - memorie (Word en ondertekende PDF)</AuLinkExternal>
-        </AuCheckbox>
-        <AuCheckbox
-          @checked={{true}}
-        >
-          <AuLinkExternal href="#!">VR 2024 2302 DOC.0200-1 Decreet dienstencheques - nota (PDF)</AuLinkExternal>
-        </AuCheckbox>
-        <AuCheckbox
-          @checked={{false}}
-        >
-          <AuLinkExternal href="#!">VR PV 2024/8 - punt 0016 (ondertekende PDF)</AuLinkExternal>
-        </AuCheckbox>
-        <AuCheckbox
-          @checked={{false}}
-        >
-          <AuLinkExternal href="#!">VR 2024 2302 DOC.0200-4 Decreet dienstencheques - advies (PDF)</AuLinkExternal>
         </AuCheckbox>
       </div>
 
