Revert "KAS-4529 Fix flex/scroll lay-outs"
This reverts commit 7e4f5a6db311ebdba67505b3182a8f2b6ba28a4f.

--- a/app/components/cases/subcases/new-subcase-form.hbs
+++ b/app/components/cases/subcases/new-subcase-form.hbs
@@ -33,7 +33,7 @@
   </Auk::Toolbar>
 </Auk::Navbar>
 
-<div class="auk-scroll-wrapper au-u-flex-item--fill">
+<div class="auk-scroll-wrapper">
   <div class="auk-scroll-wrapper__body">
     <div class="au-o-region">
       <div class="au-o-layout">
