KAS-4525 Change missing hierarchical back button behaviour (for subcases)

--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -1,7 +1,10 @@
 <Auk::Tabs @reversed={{true}}>
   <Auk::Tab
+    @route="cases"
     @isHierarchicalBack={{true}}
-  />
+  >
+    {{t "all-cases"}}
+  </Auk::Tab>
   <Auk::Tab data-test-subcase-detail-nav-overview @route="cases.case.subcases.subcase.index">
     {{t "overview"}}
   </Auk::Tab>
