--- a/app/components/subcases/side-nav.hbs
+++ b/app/components/subcases/side-nav.hbs
@@ -19,11 +19,11 @@
     <div class="auk-scroll-wrapper__body auk-scroll-wrapper__body--vertical">
       <ul>
         {{#if @subcases}}
-          {{#each (reverse @subcases) as |subcase|}}
+          {{#each (reverse @subcases) as |subcase index|}}
             <Subcases::SideNav::Subcase
               @subcase={{subcase}}
               @selected={{false}}
-              @label={{capitalize (await (this.calculateDisplayLabel subcase.id))}}
+              @index={{index}}
             />
           {{/each}}
         {{/if}}
