chore: remove searchNameTextBuffer
By using the native HTML attribute value instead of the two-way binding
argument @value of AuInput, we don't need the buffer (the two-way
binding is what was causing the search to fire off on every key stroke,
because the variable was immediately being updated).

--- a/app/components/cases/cases-header.hbs
+++ b/app/components/cases/cases-header.hbs
@@ -22,7 +22,7 @@
         <AuInput
           @width="block"
           @icon="search"
-          @value={{@nameSearchText}}
+          value={{@nameSearchText}}
           placeholder={{t "search-case-title"}}
           autocomplete="off"
           {{on "input" (perform this.debouncedSetFilter)}}
