--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -2,7 +2,7 @@
 <Cases::CasesHeader
   @didCreateNewCase={{this.navigateToDecisionmakingFlow}}
   @setNameSearchText={{this.setNameSearchText}}
-  @nameSearchText={{this.nameSearchTextBuffer}}
+  @nameSearchText={{this.nameSearchText}}
 />
 
 <AuMainContainer class="l-search-container" as |m|>
